--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "gimnasio-cristian"
+name = "gimnasio"
 version = "0.1.0"
 description = "Gestor de rutinas de clientes del gimnasio"
 readme = "README.md"
@@ -19,7 +19,7 @@ dev = [
 
 [tool.flet]
 org = "com.pablosfk"
-product = "gimnasio-cristian"
+product = "gimnasio"
 company = "PabloSFK"
 copyright = "Copyright (C) 2026 by PabloSFK"
 
