--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "Learn Lifting"
-version = "0.11.0"
+version = "0.13.1"
 description = "Gestor de rutinas de clientes para gimnasios"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -9,7 +9,9 @@ authors = [
 ]
 dependencies = [
   "flet>=0.80.1",
-  "flet-datatable2"
+  "flet-datatable2",
+  "Pillow",
+  "qrcode[pil]"
 ]
 
 [dependency-groups]
